feat: add routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,11 @@
         <mat-icon>menu</mat-icon>
       </button>
       <span>Simple CRM</span>      
-    </mat-toolbar>    
+    </mat-toolbar>
+
+    <router-outlet></router-outlet>
+
+
   </div>
 
 </mat-drawer-container>
