style: improve router-outlet and router-active

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <div class="logo-container">Platz für Logo</div>
 
     <ul class="menu-items">
-      <li><mat-icon>fact_check</mat-icon>Dashboard</li>
-      <li><mat-icon>perm_identity</mat-icon>User</li>
+      <li routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>fact_check</mat-icon>Dashboard</li>
+      <li routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>User</li>
     </ul>
 
   </mat-drawer>
@@ -18,7 +18,9 @@
       <span>Simple CRM</span>      
     </mat-toolbar>
 
-    <router-outlet></router-outlet>
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
 
 
   </div>
