--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,15 +7,14 @@
 }
 
 .logo-container {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.06);
   padding: 0 16px;
   min-height: 56px;
   display: flex;
   align-items: center;
 }
 
-mat-toolbar,
-mat-toolbar-row {
+mat-toolbar {
   min-height: 57px;
   height: 57px;
 }
@@ -25,7 +24,7 @@ mat-toolbar-row {
   padding: 0;
   margin: 0;
 
-  li{
+  li {
     padding: 0 16px;
     height: 48px;
     display: flex;
@@ -33,10 +32,21 @@ mat-toolbar-row {
     gap: 16px;
     cursor: pointer;
 
-    &:hover{
-      background-color: rgba(0, 0, 0, 0.1);
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.06);
+    }
+
+    &:focus {
+      outline: none;
     }
 
   }
-
 }
+
+.router-container {
+  padding: 32px;
+}
+
+// .router-link-active {
+//   background-color: rgba(0, 0, 0, 0.3);
+// }
