--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,3 @@
-<button mat-fab color="primary" class="add-user-btn" matTooltip="Add user">
+<button (click)="openDialog()" mat-fab color="primary" class="add-user-btn" matTooltip="Add user">
   <mat-icon>add</mat-icon>
 </button>
