--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,6 +1,48 @@
 <h2 mat-dialog-title>Add User</h2>
 <mat-dialog-content>
-  Hier Nutzer hinzufügen  
+  <div class="mt-16">
+    <mat-form-field class="mr-16" appearance="outline">
+      <mat-label>First Name</mat-label>
+      <input matInput />
+    </mat-form-field>
+
+    <mat-form-field class="mr-16" appearance="outline">
+      <mat-label>Last Name</mat-label>
+      <input matInput />
+    </mat-form-field>
+  </div>
+
+<div>
+  <mat-form-field class="mr-16" appearance="outline">
+    <mat-label>Birth Date</mat-label>
+    <input matInput [matDatepicker]="picker1">    
+    <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+    <mat-datepicker #picker1></mat-datepicker>
+  </mat-form-field>
+</div>
+
+<div>
+  <mat-form-field class="mr-16" appearance="outline">
+    <mat-label>Street</mat-label>
+    <input matInput />
+  </mat-form-field>
+  <mat-form-field class="mr-16" appearance="outline">
+    <mat-label>Number</mat-label>
+    <input matInput />
+  </mat-form-field>
+</div>
+
+<div>
+  <mat-form-field class="mr-16" appearance="outline">
+    <mat-label>Zip code</mat-label>
+    <input matInput />
+  </mat-form-field>
+  <mat-form-field class="mr-16" appearance="outline">
+    <mat-label>City</mat-label>
+    <input matInput />
+  </mat-form-field>
+</div>
+
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
