--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mr-16{
+  margin-right: 16px;
+}
+
+.mt-16{
+  margin-top: 16px !important;
+}
