style: add-user dialog new margins

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-.mr-16{
+.mr-16 {
   margin-right: 16px;
 }
 
-.mt-16{
-  margin-top: 16px !important;
+.mt-8 {
+  margin-top: 8px !important;
+}
+
+.mat-mdc-dialog-title {
+  margin: 0 !important;
+}
+mat-dialog-actions {
+  margin-left: 12px !important;
+}
+
+.full-width {
+  width: 100%;
 }
