--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,19 +1,19 @@
 <h2 mat-dialog-title>Add User</h2>
 <mat-dialog-content>
-  <div class="mt-16">
+  <div class="mt-8">
     <mat-form-field class="mr-16" appearance="outline">
       <mat-label>First Name</mat-label>
       <input matInput />
     </mat-form-field>
 
-    <mat-form-field class="mr-16" appearance="outline">
+    <mat-form-field appearance="outline">
       <mat-label>Last Name</mat-label>
       <input matInput />
     </mat-form-field>
   </div>
 
 <div>
-  <mat-form-field class="mr-16" appearance="outline">
+  <mat-form-field class="full-width" appearance="outline">
     <mat-label>Birth Date</mat-label>
     <input matInput [matDatepicker]="picker1">    
     <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
@@ -22,14 +22,11 @@
 </div>
 
 <div>
-  <mat-form-field class="mr-16" appearance="outline">
-    <mat-label>Street</mat-label>
+  <mat-form-field class="full-width" appearance="outline">
+    <mat-label>Street + House No.</mat-label>
     <input matInput />
   </mat-form-field>
-  <mat-form-field class="mr-16" appearance="outline">
-    <mat-label>Number</mat-label>
-    <input matInput />
-  </mat-form-field>
+ 
 </div>
 
 <div>
@@ -37,7 +34,7 @@
     <mat-label>Zip code</mat-label>
     <input matInput />
   </mat-form-field>
-  <mat-form-field class="mr-16" appearance="outline">
+  <mat-form-field appearance="outline">
     <mat-label>City</mat-label>
     <input matInput />
   </mat-form-field>
