--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -3,19 +3,19 @@
   <div class="mt-8">
     <mat-form-field class="mr-16" appearance="outline">
       <mat-label>First Name</mat-label>
-      <input matInput />
+      <input [(ngModel)]="user.firstName" matInput />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Last Name</mat-label>
-      <input matInput />
+      <input [(ngModel)]="user.lastName" matInput />
     </mat-form-field>
   </div>
 
 <div>
   <mat-form-field class="full-width" appearance="outline">
     <mat-label>Birth Date</mat-label>
-    <input matInput [matDatepicker]="picker1">    
+    <input [(ngModel)]="birthDate" matInput [matDatepicker]="picker1">    
     <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
     <mat-datepicker #picker1></mat-datepicker>
   </mat-form-field>
@@ -24,7 +24,7 @@
 <div>
   <mat-form-field class="full-width" appearance="outline">
     <mat-label>Street + House No.</mat-label>
-    <input matInput />
+    <input [(ngModel)]="user.street" matInput />
   </mat-form-field>
  
 </div>
@@ -32,16 +32,16 @@
 <div>
   <mat-form-field class="mr-16" appearance="outline">
     <mat-label>Zip code</mat-label>
-    <input matInput />
+    <input [(ngModel)]="user.zipCode" matInput />
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>City</mat-label>
-    <input matInput />
+    <input [(ngModel)]="user.city" matInput />
   </mat-form-field>
 </div>
 
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="" cdkFocusInitial>Ok</button>
+  <button mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Ok</button>
 </mat-dialog-actions>
