--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,47 +1,60 @@
-<h2 mat-dialog-title>Add User</h2>
-<mat-dialog-content>
-  <div class="mt-8">
-    <mat-form-field class="mr-16" appearance="outline">
-      <mat-label>First Name</mat-label>
-      <input [(ngModel)]="user.firstName" matInput />
-    </mat-form-field>
+<div class="dialog-container">
+  @if(loading){
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  }
+  <h2 mat-dialog-title>Add User</h2>
+  <mat-dialog-content>
+    <div class="mt-8">
+      <mat-form-field class="mr-16" appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.firstName" matInput />
+      </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Last Name</mat-label>
-      <input [(ngModel)]="user.lastName" matInput />
-    </mat-form-field>
-  </div>
+      <mat-form-field appearance="outline">
+        <mat-label>Last Name</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.lastName" matInput />
+      </mat-form-field>
+    </div>
 
-<div>
-  <mat-form-field class="full-width" appearance="outline">
-    <mat-label>Birth Date</mat-label>
-    <input [(ngModel)]="birthDate" matInput [matDatepicker]="picker1">    
-    <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-    <mat-datepicker #picker1></mat-datepicker>
-  </mat-form-field>
+    <div>
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Birth Date</mat-label>
+        <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="picker1" />
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker1"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Street + House No.</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.street" matInput />
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field class="mr-16" appearance="outline">
+        <mat-label>Zip code</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput />
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>City</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.city" matInput />
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button [disabled]="loading" mat-button (click)="onNoClick()">Cancel</button>
+    <button
+      [disabled]="loading"
+      mat-button
+      (click)="saveUser()"
+      [mat-dialog-close]=""
+    >
+      Ok
+    </button>
+  </mat-dialog-actions>
 </div>
-
-<div>
-  <mat-form-field class="full-width" appearance="outline">
-    <mat-label>Street + House No.</mat-label>
-    <input [(ngModel)]="user.street" matInput />
-  </mat-form-field>
- 
-</div>
-
-<div>
-  <mat-form-field class="mr-16" appearance="outline">
-    <mat-label>Zip code</mat-label>
-    <input [(ngModel)]="user.zipCode" matInput />
-  </mat-form-field>
-  <mat-form-field appearance="outline">
-    <mat-label>City</mat-label>
-    <input [(ngModel)]="user.city" matInput />
-  </mat-form-field>
-</div>
-
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Ok</button>
-</mat-dialog-actions>
