feat: add closeDialog function

--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -47,7 +47,7 @@
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button [disabled]="loading" mat-button (click)="onNoClick()">Cancel</button>
+    <button [disabled]="loading" mat-button (click)="closeDialog()">Cancel</button>
     <button
       [disabled]="loading"
       mat-button
