style: add user table prototype

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,9 +44,5 @@ mat-toolbar {
 }
 
 .router-container {
-  padding: 32px;
+  padding: 16px 24px;
 }
-
-// .router-link-active {
-//   background-color: rgba(0, 0, 0, 0.3);
-// }
