--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,30 @@
-<button (click)="openDialog()" mat-fab color="primary" class="add-user-btn" matTooltip="Add user">
+<mat-card>
+  <mat-card-content>
+    <table class="user-table">
+      <tr>
+        <th>Name</th>
+        <th>E-Mail</th>
+        <th>City</th>
+      </tr>
+      <tr>
+        <td>Name</td>
+        <td>E-Mail</td>
+        <td>City</td>
+      </tr>
+      <tr>
+        <td>Name</td>
+        <td>E-Mail</td>
+        <td>City</td>
+      </tr>
+    </table>
+  </mat-card-content>
+</mat-card>
+<button
+  (click)="openDialog()"
+  mat-fab
+  color="primary"
+  class="add-user-btn"
+  matTooltip="Add user"
+>
   <mat-icon>add</mat-icon>
 </button>
