--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,5 +1,49 @@
+mat-card-content {
+  padding: 0;
+}
+
 .add-user-btn {
   position: absolute;
   right: 56px;
   bottom: 56px;
+}
+
+.user-table {
+  width: 100%;
+  border-collapse: collapse;
+
+  tr {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+    &:last-child {
+      border-bottom: 0;
+    }
+    &:first-child {
+      cursor: unset;
+    }
+    cursor: pointer;
+    td {
+      height: 48px;
+
+      &:first-child {
+        padding-left: 16px;
+      }
+    }
+    th {
+      &:first-child {
+        padding-left: 16px;
+      }
+    }
+
+    &:not(:first-child):hover{
+      background-color: rgba(0, 0, 0, 0.06);
+    }
+
+  }
+
+  th {
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 14px;
+    font-weight: 500;
+    text-align: start;
+  }
 }
