--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -18,6 +18,13 @@
 
     <div>
       <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.email" matInput />        
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field class="full-width" appearance="outline">
         <mat-label>Birth Date</mat-label>
         <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="picker1" />
         <mat-datepicker-toggle
