style: add user-header card

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,1 +1,7 @@
-<p>user-detail works!</p>
+<mat-card class="user-detail-header">
+  <img src="./assets/img/profile.png" />
+  <div class="user-details">
+    <h2>Max Mustermann</h2>
+    email&#64;test.de
+  </div>
+</mat-card>
