--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,7 +1,19 @@
+@for (user of this.userService.singleUserData; track $index) {
 <mat-card class="user-detail-header">
   <img src="./assets/img/profile.png" />
   <div class="user-details">
-    <h2>Max Mustermann</h2>
-    email&#64;test.de
+    <h2>{{ user.firstName }} {{ user.lastName }}</h2>
+    {{ user.email }}
   </div>
 </mat-card>
+
+<mat-card class="mt-32">
+  <mat-card-header>
+    <mat-card-title>Address</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    {{ user.street }} <br />
+    {{ user.zipCode }} {{ user.city }}
+  </mat-card-content>
+</mat-card>
+}
