--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,7 +7,7 @@
         <th>City</th>
       </tr>
       
-      @for (user of this.userService.userList; track $index) {        
+      @for (user of this.getUsers(); track $index) {        
           <tr routerLink="/user/{{ user.id }}">            
             <td>{{ user.firstName }} {{ user.lastName }}</td>
             <td>{{ user.email }}</td>
