--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@ body {
   margin-top: 8px !important;
 }
 
+.mt-32{
+  margin-top: 32px;
+}
+
 .mat-mdc-dialog-title {
   margin: 0 !important;
 }
