style: add button on address-card

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -12,6 +12,12 @@
     <mat-card-title>Address</mat-card-title>
   </mat-card-header>
   <mat-card-content>
+
+    <button mat-icon-button class="pin-right-upper-corner" (click)="openAddressDialog()">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+
+
     {{ user.street }} <br />
     {{ user.zipCode }} {{ user.city }}
   </mat-card-content>
