feat: add 2 new edit-components

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,5 +1,15 @@
 @for (user of this.userService.singleUserData; track $index) {
 <mat-card class="user-detail-header">
+  <button
+      mat-icon-button
+      class="pin-right-upper-corner"
+      [matMenuTriggerFor]="userMenu"
+    >
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #userMenu="matMenu">
+      <button mat-menu-item (click)="editUserDetail()">Edit</button>
+    </mat-menu>
   <img src="./assets/img/profile.png" />
   <div class="user-details">
     <h2>{{ user.firstName }} {{ user.lastName }}</h2>
@@ -12,11 +22,16 @@
     <mat-card-title>Address</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-
-    <button mat-icon-button class="pin-right-upper-corner" (click)="openAddressDialog()">
+    <button
+      mat-icon-button
+      class="pin-right-upper-corner"
+      [matMenuTriggerFor]="addressMenu"
+    >
       <mat-icon>more_vert</mat-icon>
     </button>
-
+    <mat-menu #addressMenu="matMenu">
+      <button mat-menu-item (click)="editMenu()">Edit</button>
+    </mat-menu>
 
     {{ user.street }} <br />
     {{ user.zipCode }} {{ user.city }}
