--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -1,1 +1,36 @@
-<p>dialog-edit-address works!</p>
+<div class="dialog-container">
+  @if(loading){
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  }
+  <h2 mat-dialog-title>Edit address</h2>
+  <mat-dialog-content>
+    <div class="mt-8">
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Street + House No.</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user!.street" matInput />
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field class="mr-16" appearance="outline">
+        <mat-label>Zip code</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user!.zipCode" matInput />
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>City</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user!.city" matInput />
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button [disabled]="loading" mat-button (click)="closeDialog()">Cancel</button>
+    <button
+      [disabled]="loading"
+      mat-button
+      (click)="saveUser()"
+      [mat-dialog-close]=""
+    >
+      Ok
+    </button>
+  </mat-dialog-actions>
+</div>
