--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,1 +1,54 @@
-<p>dialog-edit-user works!</p>
+<div class="dialog-container">
+  @if(loading){
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  }
+  <h2 mat-dialog-title>Edit User</h2>
+
+  <mat-dialog-content>
+    <div class="mt-8">
+      <mat-form-field class="mr-16" appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user!.firstName" matInput />
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Last Name</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user!.lastName" matInput />
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user!.email" matInput />
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Birth Date</mat-label>
+        <!-- <input [disabled]="loading" [value]="user!.birthDate" matInput [matDatepicker]="picker1" /> -->
+        <input [disabled]="loading" matInput [matDatepicker]="picker1" />
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker1"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+
+  <mat-dialog-actions>
+    <button [disabled]="loading" mat-button (click)="closeDialog()">
+      Cancel
+    </button>
+    <button
+      [disabled]="loading"
+      mat-button
+      (click)="saveUser()"
+      [mat-dialog-close]=""
+    >
+      Ok
+    </button>
+  </mat-dialog-actions>
+</div>
