first usable version

--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -28,7 +28,7 @@
       <mat-form-field class="full-width" appearance="outline">
         <mat-label>Birth Date</mat-label>
         <!-- <input [disabled]="loading" [value]="user!.birthDate" matInput [matDatepicker]="picker1" /> -->
-        <input [disabled]="loading" matInput [matDatepicker]="picker1" />
+        <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="picker1" />
         <mat-datepicker-toggle
           matIconSuffix
           [for]="picker1"
